[gd_scene load_steps=4 format=3 uid="uid://b21bxfvh33aue"]

[ext_resource type="Script" uid="uid://c26kjosps55mn" path="res://scripts/buy_stat.gd" id="1_a4l52"]
[ext_resource type="Texture2D" uid="uid://gucs5c7t3uxs" path="res://assets/ui/arrow_up.png" id="1_islu8"]
[ext_resource type="Texture2D" uid="uid://cippa5og2c2ql" path="res://assets/ui/arrow_down.png" id="3_ywwuj"]

[node name="BuyStat" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 8
script = ExtResource("1_a4l52")

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_islu8")
icon_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(256, 200)
layout_mode = 2
color = Color(0.59, 0.59, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="UpgradeName" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "MaxSpeed"
horizontal_alignment = 1

[node name="UpgradeLevel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "(0 / 6)"
horizontal_alignment = 1

[node name="UpgradeCost" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cost (20)"
horizontal_alignment = 1

[node name="DowngradeButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_ywwuj")
icon_alignment = 1

[connection signal="button_down" from="UpgradeButton" to="." method="_on_upgrade_button_button_down"]
[connection signal="button_down" from="DowngradeButton" to="." method="_on_downgrade_button_button_down"]
